k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-app
  labels:
    name: laravel-app
    environment: local
